📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -6094,5 +6094,213 @@
         "published": "Wed, 10 Dec 2025 14:59:47 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46218419\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/chatgpt-is-apples-most-downloaded-app-of-2025-in-the-us/",
+        "title": "ChatGPT is Apple\u2019s most downloaded app of 2025 in the US",
+        "link": "https://techcrunch.com/2025/12/10/chatgpt-is-apples-most-downloaded-app-of-2025-in-the-us/",
+        "published": "Wed, 10 Dec 2025 15:17:26 +0000",
+        "source": "TechCrunch",
+        "summary": "This is ChatGPT's first year as the No. 1 app on the U.S. App Store by downloads."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/amazon-now-offers-same-day-delivery-of-perishable-groceries-in-2300-us-cities/",
+        "title": "Amazon now offers same-day delivery of perishable groceries in 2,300 US cities",
+        "link": "https://techcrunch.com/2025/12/10/amazon-now-offers-same-day-delivery-of-perishable-groceries-in-2300-us-cities/",
+        "published": "Wed, 10 Dec 2025 15:14:28 +0000",
+        "source": "TechCrunch",
+        "summary": "The e-commerce giant says it will expand the service to additional cities in 2026."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/841536/smart-glasses-ai-glasses-xr-ar-headsets-terminology-wearables",
+        "title": "No one knows what to call these things",
+        "link": "https://www.theverge.com/gadgets/841536/smart-glasses-ai-glasses-xr-ar-headsets-terminology-wearables",
+        "published": "2025-12-10T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "I asked a simple question at Google's Project Aura demo last week. What do you call these things? To my surprise, multiple people launched into a vigorous discussion on the taxonomy of glasses-shaped face computers. It turns out \"smart glasses\" is out as a term. The term \"AI glasses\" is in. Kind of. Actually, it [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/streaming/841581/warner-bros-netflix-paramount-skydance-ellison-hostile-bid",
+        "title": "There are no good outcomes for the Warner Bros. sale",
+        "link": "https://www.theverge.com/streaming/841581/warner-bros-netflix-paramount-skydance-ellison-hostile-bid",
+        "published": "2025-12-10T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Netflix is the frontrunner to become Warner Bros.' new owner, but the war for control of the legacy studio isn't over just yet. Paramount Skydance has made its own outsize offer for the company that would give CEO David Ellison even more control over the news and entertainment landscape. And while Warner Bros. Discovery has [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841514/pixel-watch-4-gestures-pinch-control-wrist-turn-dismiss-enhaced-smart-replies",
+        "title": "The Pixel Watch 4 is getting new one-handed gestures and better smart replies",
+        "link": "https://www.theverge.com/news/841514/pixel-watch-4-gestures-pinch-control-wrist-turn-dismiss-enhaced-smart-replies",
+        "published": "2025-12-10T10:53:21-05:00",
+        "source": "The Verge",
+        "summary": "Google has started to roll out the first update for the Pixel Watch 4 since the wearable launched last August. WearOS 6.1 is available for the Pixel Watch 2, 3, and 4 models, but only the Pixel Watch 4 will be getting a pair of new one-handed gestures, while improvements made to smart replies are [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/dhs-data-grab-putting-us-citizens-at-risk/",
+        "title": "The DHS Data Grab Is Putting US Citizens at Risk",
+        "link": "https://www.wired.com/story/dhs-data-grab-putting-us-citizens-at-risk/",
+        "published": "Wed, 10 Dec 2025 16:00:00 +0000",
+        "source": "WIRED",
+        "summary": "As the US government rapidly merges data from across agencies in service of draconian immigration policies, citizens increasingly risk being caught up as well."
+    },
+    {
+        "id": "https://www.wired.com/gallery/gifts-for-moms-2025/",
+        "title": "18 Best Gifts for Mom (2025): LED Masks, E-Readers, Blow-Dry Brushes",
+        "link": "https://www.wired.com/gallery/gifts-for-moms-2025/",
+        "published": "Wed, 10 Dec 2025 15:39:00 +0000",
+        "source": "WIRED",
+        "summary": "From high-tech skin care to cool accessories, these are our favorite picks for the WIRED mom in your life."
+    },
+    {
+        "id": "https://www.wired.com/story/a-complete-guide-to-the-jeffrey-epstein-document-dumps/",
+        "title": "A Complete Guide to the Jeffrey Epstein Document Dumps",
+        "link": "https://www.wired.com/story/a-complete-guide-to-the-jeffrey-epstein-document-dumps/",
+        "published": "Wed, 10 Dec 2025 15:26:18 +0000",
+        "source": "WIRED",
+        "summary": "New records about the infamous sex offender are released seemingly every week. Here\u2019s a quick rundown of who\u2019s releasing the Epstein documents, what they contain\u2014and what they\u2019re releasing next."
+    },
+    {
+        "id": "https://www.engadget.com/the-best-board-games-to-gift-for-the-2025-holiday-season-125529024.html?src=rss",
+        "title": "The best board games to gift for the 2025 holiday season",
+        "link": "https://www.engadget.com/the-best-board-games-to-gift-for-the-2025-holiday-season-125529024.html?src=rss",
+        "published": "Wed, 10 Dec 2025 16:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It's become cliche to say that we live in a golden age of board games, but to paraphrase the great stoic philosopher Andy Bernard, it's great to know you're in the good old days before you've left them. Great titles are still coming out by the thousands every year, from crowd-pleasing party games to genre-bending, theme-heavy Euros. Whether the gamer in your life is looking for a mind-warping challenge, a fun evening with friends or something in-between, we've got new releases or old favorite"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/cloverpit-a-balatro-style-game-with-a-grungy-slot-machine-hits-ios-and-android-on-december-17-154500028.html?src=rss",
+        "title": "CloverPit, a Balatro-style game with a grungy slot machine, hits iOS and Android on December 17",
+        "link": "https://www.engadget.com/gaming/cloverpit-a-balatro-style-game-with-a-grungy-slot-machine-hits-ios-and-android-on-december-17-154500028.html?src=rss",
+        "published": "Wed, 10 Dec 2025 15:45:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/hades-2-slot-machine-horror-and-other-new-indie-games-worth-checking-out-110000884.html\" target=\"_blank\"><em>CloverPit</em></a><em> </em>is one of my favorite games of the year so far. Developer Panik Arcade took the formula that helped make <em>Balatro </em>so successful \u2014 using various tools to bend the rules of the game to help you rack up obscenely high scores \u2014 and based it around a slot machine rather than poker. It\u2019s been a hit so far on P"
+    },
+    {
+        "id": "https://www.engadget.com/deals/apples-studio-display-is-230-off-right-now-152328981.html?src=rss",
+        "title": "Apple's Studio Display is $230 off right now",
+        "link": "https://www.engadget.com/deals/apples-studio-display-is-230-off-right-now-152328981.html?src=rss",
+        "published": "Wed, 10 Dec 2025 15:23:28 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple\u2019s Studio Display hasn\u2019t been updated since it launched in 2022, but it remains one of the best monitors for the Mac-oriented, and right now you can pick one up for $230 off. This <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0DZDDWSBG&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=6d3e93b1-799c-4220-b953-8fe2f4d38e21&amp;featureId=text-link&amp;merchantName=Amazon&amp;linkText=deal&am"
+    },
+    {
+        "id": "https://gizmodo.com/this-400000-year-old-campfire-could-rewrite-human-history-2000697601",
+        "title": "This 400,000-Year-Old Campfire Could Rewrite Human History",
+        "link": "https://gizmodo.com/this-400000-year-old-campfire-could-rewrite-human-history-2000697601",
+        "published": "Wed, 10 Dec 2025 16:00:57 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Barnham Site\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Barnham-site.jpg\" width=\"1920\" /><br /><br />Humans likely harvested their first flames from wildfire. When they learned to make it themselves, it changed everything."
+    },
+    {
+        "id": "https://gizmodo.com/jack-champion-avatar-4-scenes-spider-2000697806",
+        "title": "Jack Champion Has Already Filmed \u2018More Than a Little\u2019 of \u2018Avatar 4\u2019",
+        "link": "https://gizmodo.com/jack-champion-avatar-4-scenes-spider-2000697806",
+        "published": "Wed, 10 Dec 2025 16:00:26 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Avatar Spider Interview\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Avatar-Spider-interview.jpg\" width=\"1920\" /><br /><br />The 'Avatar: Fire and Ash' star gives us an update on how the next 'Avatar' is progressing."
+    },
+    {
+        "id": "https://gizmodo.com/chatgpt-can-now-use-photoshop-and-other-adobe-apps-for-editing-2000697834",
+        "title": "ChatGPT Can Now Use Photoshop and Other Adobe Apps for Editing",
+        "link": "https://gizmodo.com/chatgpt-can-now-use-photoshop-and-other-adobe-apps-for-editing-2000697834",
+        "published": "Wed, 10 Dec 2025 15:50:29 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Adobe Express For Chatgpt\" class=\"attachment-full size-full wp-post-image\" height=\"1080\" src=\"https://gizmodo.com/app/uploads/2025/12/Adobe-Express-for-ChatGPT.jpg\" width=\"1920\" /><br /><br />OpenAI\u2019s chatbot just added new integrations with Photoshop, Express, and Acrobat."
+    },
+    {
+        "id": "https://gizmodo.com/2025-was-a-banner-year-for-audio-nostalgia-2000697474",
+        "title": "2025 Was a Banner Year for Audio Nostalgia",
+        "link": "https://gizmodo.com/2025-was-a-banner-year-for-audio-nostalgia-2000697474",
+        "published": "Wed, 10 Dec 2025 15:45:10 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Snowsky Echo Mini\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/snowsky-echo-mini.jpg\" width=\"1920\" /><br /><br />Never thought I'd say this, but CD players are so back."
+    },
+    {
+        "id": "https://mashable.com/article/chatgpt-adds-adobe-photoshop",
+        "title": "Adobe Photoshop comes to ChatGPT",
+        "link": "https://mashable.com/article/chatgpt-adds-adobe-photoshop",
+        "published": "Wed, 10 Dec 2025 15:50:53 +0000",
+        "source": "Mashable",
+        "summary": "Adobe launches apps for ChatGPT that let users photoshop, make PDFs, and customize other content with the help from OpenAI's popular chatbot."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-lego-icons-poinsettia-deal",
+        "title": "This Lego poinsettia is the ultimate holiday centerpiece, and its under $40",
+        "link": "https://mashable.com/article/dec-10-lego-icons-poinsettia-deal",
+        "published": "Wed, 10 Dec 2025 15:41:09 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 10, the Lego Icons Poinsettia (10370) building set is on sale for $39.35, down from $49.99. That's a 21% discount or a $10.64 price cut."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-dji-power-2000-deal",
+        "title": "The DJI Power 2000 portable power station is at its lowest price ever \u2014 almost half off",
+        "link": "https://mashable.com/article/dec-10-dji-power-2000-deal",
+        "published": "Wed, 10 Dec 2025 15:25:19 +0000",
+        "source": "Mashable",
+        "summary": "The DJI Power 2000 is on sale at Amazon for $699, down from the list price of $1,299. That's a 46% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-bose-quietcomfort-headphones-deal",
+        "title": "Bose QuietComfort headphones are now 50% off in a better-than-Black Friday deal",
+        "link": "https://mashable.com/article/dec-10-bose-quietcomfort-headphones-deal",
+        "published": "Wed, 10 Dec 2025 15:22:11 +0000",
+        "source": "Mashable",
+        "summary": "Amazon and Best Buy have the Bose QuietComfort headphones on sale for just $179. That's $20 better than their Black Friday deal."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-lego-super-mario-piranha-plant-deal",
+        "title": "Snag a Lego Super Mario Piranha Plant for 40% off at Amazon",
+        "link": "https://mashable.com/article/dec-10-lego-super-mario-piranha-plant-deal",
+        "published": "Wed, 10 Dec 2025 15:19:40 +0000",
+        "source": "Mashable",
+        "summary": "Find the best Lego deal at Amazon. As of Dec. 10, get 40% off the Lego Super Mario Piranha Plant at Amazon."
+    },
+    {
+        "id": "https://www.zdnet.com/article/treblab-hd-360-pro-review/",
+        "title": "Finally, a Bluetooth speaker that brings the funk and chill (without breaking the bank)",
+        "link": "https://www.zdnet.com/article/treblab-hd-360-pro-review/",
+        "published": "Wed, 10 Dec 2025 16:13:00 GMT",
+        "source": "Latest news",
+        "summary": "Looking for a well-priced Bluetooth speaker that fills a room with dynamic sound? This Treblab model I tested is it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-photos-new-video-editing-tools/",
+        "title": "Your Google Photos just got 4 huge video editing upgrades - what's new",
+        "link": "https://www.zdnet.com/article/google-photos-new-video-editing-tools/",
+        "published": "Wed, 10 Dec 2025 15:39:21 GMT",
+        "source": "Latest news",
+        "summary": "The tools are designed to help you edit videos quickly and more easily."
+    },
+    {
+        "id": "https://www.zdnet.com/article/my-top-4-browsers-does-not-include-chrome/",
+        "title": "My top 4 browsers after testing nearly every one (spoiler: Chrome fans may be upset)",
+        "link": "https://www.zdnet.com/article/my-top-4-browsers-does-not-include-chrome/",
+        "published": "Wed, 10 Dec 2025 15:35:00 GMT",
+        "source": "Latest news",
+        "summary": "Ready to try a new browser? I've installed almost every browser over the years, and these are my top picks."
+    },
+    {
+        "id": "https://www.zdnet.com/article/agentic-ai-foundation-fix-messy-agent-ecosystems/",
+        "title": "The fix for messy AI agent ecosystems might finally be here",
+        "link": "https://www.zdnet.com/article/agentic-ai-foundation-fix-messy-agent-ecosystems/",
+        "published": "Wed, 10 Dec 2025 15:20:00 GMT",
+        "source": "Latest news",
+        "summary": "Backed by OpenAI, Anthropic, and others, AAIF aims to standardize AI agents and build an open, interoperable foundation."
+    },
+    {
+        "id": "https://e360.yale.edu/digest/new-york-congestion-pricing-pollution",
+        "title": "In New York City, Congestion Pricing Leads to Marked Drop in Pollution",
+        "link": "https://e360.yale.edu/digest/new-york-congestion-pricing-pollution",
+        "published": "Wed, 10 Dec 2025 15:25:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46218725\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/10/1128999/exclusive-ebook-aging-clocks-understanding-why-we-age/",
+        "title": "Exclusive eBook: Aging Clocks & Understanding Why We Age",
+        "link": "https://www.technologyreview.com/2025/12/10/1128999/exclusive-ebook-aging-clocks-understanding-why-we-age/",
+        "published": "Wed, 10 Dec 2025 15:08:45 +0000",
+        "source": "MIT Technology Review",
+        "summary": "In this exclusive subscriber-only eBook, you&#8217;ll learn about a new method that scientists have uncovered to look at the ways our bodies are aging. by \u00a0Jessica Hamzelou October 14, 2025 Table of Contents: Related Stories: Access all subscriber-only eBooks:"
     }
 ]
