📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -6302,5 +6302,221 @@
         "published": "Wed, 10 Dec 2025 15:08:45 +0000",
         "source": "MIT Technology Review",
         "summary": "In this exclusive subscriber-only eBook, you&#8217;ll learn about a new method that scientists have uncovered to look at the ways our bodies are aging. by \u00a0Jessica Hamzelou October 14, 2025 Table of Contents: Related Stories: Access all subscriber-only eBooks:"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/google-is-testing-ai-powered-article-overviews-on-select-publications-google-news-pages/",
+        "title": "Google is testing AI-powered article overviews on select publications\u2019 Google News pages",
+        "link": "https://techcrunch.com/2025/12/10/google-is-testing-ai-powered-article-overviews-on-select-publications-google-news-pages/",
+        "published": "Wed, 10 Dec 2025 17:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Google is testing AI-powered article overviews on participating publications\u2019 Google News pages as part of a new pilot program, the search giant announced on Wednesday. News publishers participating in the pilot program include Der Spiegel, El Pa\u00eds, Folha, Infobae, Kompas, The Guardian, The Times of India, The Washington Examiner, and The Washington Post, among others. [&#8230;]"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/amazon-changes-how-copyright-protection-is-applied-to-kindle-directs-self-published-ebooks/",
+        "title": "Amazon changes how copyright protection is applied to Kindle Direct\u2019s self-published ebooks",
+        "link": "https://techcrunch.com/2025/12/10/amazon-changes-how-copyright-protection-is-applied-to-kindle-directs-self-published-ebooks/",
+        "published": "Wed, 10 Dec 2025 16:26:01 +0000",
+        "source": "TechCrunch",
+        "summary": "Amazon says its Kindle Direct DRM-free titles will be available as PDFs and EPUB files going forward."
+    },
+    {
+        "id": "https://www.theverge.com/news/841503/android-emergency-live-video",
+        "title": "Android users can now share a live video on 911 calls",
+        "link": "https://www.theverge.com/news/841503/android-emergency-live-video",
+        "published": "2025-12-10T12:01:00-05:00",
+        "source": "The Verge",
+        "summary": "A new feature coming to Android will allow users to get more support during emergencies by sharing a live video feed from their phone with 911 responders. For instance, if someone calls 911 for a medical emergency, the 911 responder can use the live video feed to walk the caller through CPR or first aid [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841603/google-ai-mode-source-links-web-guide",
+        "title": "Google says it will link to more sources in AI Mode",
+        "link": "https://www.theverge.com/news/841603/google-ai-mode-source-links-web-guide",
+        "published": "2025-12-10T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Google is planning to update its AI-powered search feature, AI Mode, to include more in-line links to the sources it's pulling information from. The company included the update as part of a broader change to the way it interacts with sources, saying it will also introduce the links embedded inside AI Mode with an AI-generated [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/22954554/best-video-doorbell-camera",
+        "title": "The best doorbell cameras",
+        "link": "https://www.theverge.com/22954554/best-video-doorbell-camera",
+        "published": "2025-12-10T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "With a smart video doorbell, your front door's communication skills go from 1980s landline to a modern smartphone. Combining a motion-activated camera with a microphone, speaker, and buzzer, a doorbell camera sends alerts to your phone, allowing you to see who's at the door without needing to open it or even be at home. Whether [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/841664/calibri-is-too-woke-for-the-state-department",
+        "title": "Calibri is too woke for the State Department",
+        "link": "https://www.theverge.com/news/841664/calibri-is-too-woke-for-the-state-department",
+        "published": "2025-12-10T11:54:04-05:00",
+        "source": "The Verge",
+        "summary": "The US State Department is turning back to an old typeface in its latest quest to tear up anything related to diversity or accessibility. In an internal document seen by Reuters and The New York Times, US Secretary of State Marco Rubio said that the Biden-era decision to switch to Calibri typeface in official department [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/report/841610/ai-chatbot-suicide-safety-failure",
+        "title": "Chatbots are struggling with suicide hotline numbers",
+        "link": "https://www.theverge.com/report/841610/ai-chatbot-suicide-safety-failure",
+        "published": "2025-12-10T11:32:15-05:00",
+        "source": "The Verge",
+        "summary": "Last week, I told multiple AI chatbots I was struggling, considering self-harm, and in need of someone to talk to. Fortunately, I didn't feel this way, nor did I need someone to talk to, but of the millions of people turning to AI with mental health challenges, some are struggling and need support. Chatbot companies [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/2-men-linked-to-chinas-salt-typhoon-hacker-group-likely-trained-in-a-cisco-academy/",
+        "title": "2 Men Linked to China\u2019s Salt Typhoon Hacker Group Likely Trained in a Cisco \u2018Academy\u2019",
+        "link": "https://www.wired.com/story/2-men-linked-to-chinas-salt-typhoon-hacker-group-likely-trained-in-a-cisco-academy/",
+        "published": "Wed, 10 Dec 2025 17:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The names of two partial owners of firms linked to the Salt Typhoon hacker group also appeared in records for a Cisco training program\u2014years before the group targeted Cisco\u2019s devices in a spy campaign."
+    },
+    {
+        "id": "https://arstechnica.com/health/2025/12/impeachment-articles-filed-against-rfk-jr-claiming-abuse-of-power/",
+        "title": "Impeachment articles filed against RFK Jr., claiming abuse of power",
+        "link": "https://arstechnica.com/health/2025/12/impeachment-articles-filed-against-rfk-jr-claiming-abuse-of-power/",
+        "published": "Wed, 10 Dec 2025 15:11:10 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "He's the \"biggest self-created threat to our health and safety,\" Stevens said."
+    },
+    {
+        "id": "https://www.engadget.com/social-media/reddit-is-starting-to-verify-public-figures-170000833.html?src=rss",
+        "title": "Reddit is starting to verify public figures",
+        "link": "https://www.engadget.com/social-media/reddit-is-starting-to-verify-public-figures-170000833.html?src=rss",
+        "published": "Wed, 10 Dec 2025 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Like it or not, the checkmark has become an almost universal symbol on most social platforms, even though its exact meaning can vary significantly between services. Now, Reddit, which historically hasn't cared that much about its users' identity, is joining the club and starting to test verification for public figures on its platform.</p><p>The company is beginning &quot;a limited alpha test&quot; of the feature with a small &quot;curated&quot; group of accounts that includes journalists from"
+    },
+    {
+        "id": "https://www.engadget.com/ai/openais-house-of-cards-seems-primed-to-collapse-170000900.html?src=rss",
+        "title": "OpenAI's house of cards seems primed to collapse",
+        "link": "https://www.engadget.com/ai/openais-house-of-cards-seems-primed-to-collapse-170000900.html?src=rss",
+        "published": "Wed, 10 Dec 2025 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>OpenAI is in a far less commanding position than it was following the public release of ChatGPT a few short years ago.&nbsp;</p><p>Back in 2022, the sudden popularity of ChatGPT <a class=\"link\" href=\"https://www.theverge.com/2023/5/12/23721037/google-ai-progress-search-docs-starline-video-calls\" target=\"_blank\">sent Google into a panic</a>. The company was so worried about the possibility of the upstart chatbot disrupting its Search business, executives sounded a <a class=\"link rapid-with-cli"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/petco-accidentally-exposed-heaps-of-customer-information-163825302.html?src=rss",
+        "title": "Petco accidentally exposed heaps of customer information",
+        "link": "https://www.engadget.com/big-tech/petco-accidentally-exposed-heaps-of-customer-information-163825302.html?src=rss",
+        "published": "Wed, 10 Dec 2025 16:38:25 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Petco has accidentally exposed a whole lot of customer data and personal information, <a href=\"https://techcrunch.com/2025/12/10/petco-takes-down-vetco-website-after-exposing-customers-personal-information/\"><ins>according to a report by </ins><em><ins>TechCrunch</ins></em></a>. This is thanks to a security lapse involving its Vetco clinics website, forcing the company to take a portion of that site offline.</p>\n<p>Petco has confirmed the leak and <em>TechCrunch</em> noted that the security l"
+    },
+    {
+        "id": "https://gizmodo.com/holiday-movies-ranked-horror-scifi-fantasy-2000696724",
+        "title": "Our 16 Favorite Holiday Genre Movies, Ranked",
+        "link": "https://gizmodo.com/holiday-movies-ranked-horror-scifi-fantasy-2000696724",
+        "published": "Wed, 10 Dec 2025 17:00:51 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Christmas Genre Movies Ranked Grinch Nightmare Before Elf (1)\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/christmas-genre-movies-ranked-grinch-nightmare-before-elf-1.jpg\" width=\"1920\" /><br /><br />From 'Elf' and 'Gremlins' to 'Polar Express' and the Grinch, here's our ranking of holiday movies with a genre twist."
+    },
+    {
+        "id": "https://gizmodo.com/taylor-swift-is-a-nazi-claims-were-spurred-by-a-coordinated-bot-attack-study-finds-2000697793",
+        "title": "\u2018Taylor Swift Is a Nazi\u2019 Claims Were Spurred by a Coordinated Bot Attack, Study Finds",
+        "link": "https://gizmodo.com/taylor-swift-is-a-nazi-claims-were-spurred-by-a-coordinated-bot-attack-study-finds-2000697793",
+        "published": "Wed, 10 Dec 2025 16:30:06 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Vibrant wax figure of Taylor Swift holding a sparkling microphone, surrounded by colorful neon lights at Madame Tussauds London\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/shutterstock_2673688277.jpg\" width=\"1920\" /><br /><br />Bots manipulated online discourse to convince people that Taylor Swift was MAGA."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-the-brick-app-blocker-deal",
+        "title": "Trying to curb your screen time? The Brick is 20% off in a rare deal for the holidays.",
+        "link": "https://mashable.com/article/dec-10-the-brick-app-blocker-deal",
+        "published": "Wed, 10 Dec 2025 16:12:29 +0000",
+        "source": "Mashable",
+        "summary": "The Brick is on sale for just $47.20 as of Dec. 10. That's 20% off its $59 MSRP, a discount usually reserved for students."
+    },
+    {
+        "id": "https://mashable.com/article/nintendo-virtual-boy-switch-switch-2",
+        "title": "Nintendos Virtual Boy replica for Switch 2 is finally available to buy",
+        "link": "https://mashable.com/article/nintendo-virtual-boy-switch-switch-2",
+        "published": "Wed, 10 Dec 2025 16:11:03 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 10, Nintendo's Virtual Boy replica for Switch 2 is finally available to buy for Nintendo Switch Online members."
+    },
+    {
+        "id": "https://mashable.com/article/dec-10-apple-watch-ultra-2-deal",
+        "title": "The Apple Watch Ultra 2 just dropped to a new best-ever price \u2014 save $250 at Amazon",
+        "link": "https://mashable.com/article/dec-10-apple-watch-ultra-2-deal",
+        "published": "Wed, 10 Dec 2025 16:04:28 +0000",
+        "source": "Mashable",
+        "summary": "The Apple Watch Ultra 2 has dropped to a new best price ever of $549 at Amazon. That's $250 off its list price."
+    },
+    {
+        "id": "https://www.zdnet.com/article/pacsafe-vibe-325-bag-review/",
+        "title": "This anti-theft tech bag stopped a pickpocketer in real time - how it works",
+        "link": "https://www.zdnet.com/article/pacsafe-vibe-325-bag-review/",
+        "published": "Wed, 10 Dec 2025 17:08:00 GMT",
+        "source": "Latest news",
+        "summary": "This bag saved me from potentially losing access to my smartphone and passport on my last trip."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-clear-your-android-phone-cache/",
+        "title": "How to clear your Android phone cache (and wipe out lag for good)",
+        "link": "https://www.zdnet.com/article/how-to-clear-your-android-phone-cache/",
+        "published": "Wed, 10 Dec 2025 17:06:00 GMT",
+        "source": "Latest news",
+        "summary": "This simple tweak can noticeably boost speed and responsiveness on almost any device - no matter the brand. Here's how."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-upgrade-your-incompatible-windows-10-pc-to-windows-11-for-free-today/",
+        "title": "How to upgrade your 'incompatible' Windows 10 PC to Windows 11 now - for free",
+        "link": "https://www.zdnet.com/article/how-to-upgrade-your-incompatible-windows-10-pc-to-windows-11-for-free-today/",
+        "published": "Wed, 10 Dec 2025 17:03:47 GMT",
+        "source": "Latest news",
+        "summary": "Microsoft really doesn't want customers to upgrade older PCs to Windows 11, but there are workarounds for all but the oldest devices. Now that Windows 10 support has officially ended, here's everything you need to know."
+    },
+    {
+        "id": "https://www.zdnet.com/article/zorin-vs-andruin-linux-windows-distro/",
+        "title": "Zorin OS vs. AnduinOS: How to pick the right Windows-like Linux distro for you",
+        "link": "https://www.zdnet.com/article/zorin-vs-andruin-linux-windows-distro/",
+        "published": "Wed, 10 Dec 2025 16:45:00 GMT",
+        "source": "Latest news",
+        "summary": "If you're looking for the best Linux distribution to wean you from Windows, there are two that make a solid case for the task."
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-windows-like-linux-distros/",
+        "title": "8 most Windows-like Linux distros - if you're ready to ditch Microsoft",
+        "link": "https://www.zdnet.com/article/most-windows-like-linux-distros/",
+        "published": "Wed, 10 Dec 2025 16:41:00 GMT",
+        "source": "Latest news",
+        "summary": "Your PC doesn't have to die with Windows 10. These Linux distros make switching easy."
+    },
+    {
+        "id": "https://neal.fun/size-of-life/",
+        "title": "Size of Life",
+        "link": "https://neal.fun/size-of-life/",
+        "published": "Wed, 10 Dec 2025 16:02:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46219346\">Comments</a>"
+    },
+    {
+        "id": "https://finance.yahoo.com/news/china-deepseek-uses-banned-nvidia-131207746.html",
+        "title": "DeepSeek uses banned Nvidia chips for AI model, report says",
+        "link": "https://finance.yahoo.com/news/china-deepseek-uses-banned-nvidia-131207746.html",
+        "published": "Wed, 10 Dec 2025 16:34:52 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46219853\">Comments</a>"
+    },
+    {
+        "id": "https://qwen.ai/blog?id=qwen3-omni-flash-20251201",
+        "title": "Qwen3-Omni-Flash-2025-12-01\uff1aa next-generation native multimodal large model",
+        "link": "https://qwen.ai/blog?id=qwen3-omni-flash-20251201",
+        "published": "Wed, 10 Dec 2025 16:13:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46219538\">Comments</a>"
+    },
+    {
+        "id": "https://tritium.legal/blog/outlook",
+        "title": "COM Like a Bomb: Rust Outlook Add-in",
+        "link": "https://tritium.legal/blog/outlook",
+        "published": "Wed, 10 Dec 2025 15:10:36 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46218538\">Comments</a>"
+    },
+    {
+        "id": "https://frederikbraun.de/why-sethtml.html",
+        "title": "Why the Sanitizer API is just `setHTML()`",
+        "link": "https://frederikbraun.de/why-sethtml.html",
+        "published": "Mon, 08 Dec 2025 22:37:28 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46198606\">Comments</a>"
     }
 ]
